<resources>
    <string name="app_name">FlashGame</string>
    <string name="ok">Zapisz kolekcje</string>
    <string name="name">Nazwa kolekcji</string>
    <string name="tape">Podaj nazwę fiszki</string>
    <string name="tapeReverse">Podaj ukrytą treść</string>
    <string name="descriptoinButton1">Dodaj fiszke</string>
    <string name="titleError">Podaj nazwe kolekcji</string>
    <string name="fieldsError">Pole nie może być puste</string>
    <string name="countAdded">Liczba dodanych fiszek</string>
    <string name="messageAfterAdd">Dodano kolekcje</string>
    <string name="createCollection">Dodaj kolekcje</string>
    <string name="openCollection">Otwórz kolekcję</string>
    <string name="Statistics">Statystyki</string>
    <string name="connectionNameField">Nazwa kolekcji</string>
    <string name="OKButton">OK</string>
    <string name="heads">Pytanie</string>
    <string name="Tails">Ukryta treść</string>
    <string name="saveCollection">Zapisz kolekcje</string>
    <string name="chooseCollection">Wybierz kolekcję</string>
    <string name="progress">Postępy w nauce</string>
    <string name="rewards">Odznaczenia</string>
    <string name="tips">Porady</string>
    <string name="tapLabel">Dotknij na fiszkę po odpowiedź</string>
    <string name="collectionEnd">Koniec kolekcji</string>
    <string name="points">Liczba punktów: </string>
    <string name="beforeStart">Liczba punktów: 0 </string>
    <string name="share">Udostępnij</string>
    <string name="getCollection">Pobierz kolekcję</string>

    <string-array name="list">
        <item>jeden</item>
        <item>dwa</item>
    </string-array>

</resources>
